--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,4 +3,4 @@ mysql_root_password: 'free77'
 
 mysql_user_name: 'wpuser'
 mysql_user_password: 'free77'
-mysql_user_privileges: 'wpuser.*.*:ALL'
+mysql_user_privileges: 'wpuser.*:ALL'
