--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -7,5 +7,5 @@ mysql_root_password: 'secret'
 
 mysql_user_name: 'user'
 mysql_user_password: 'secret'
-mysql_user_privileges: 'wpuser.*.*:ALL'
+mysql_user_privileges: 'wpuser.*:ALL'
 
