adding role nginx

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -4,3 +4,11 @@ mysql_root_password: 'free77'
 mysql_user_name: 'wpuser'
 mysql_user_password: 'free77'
 mysql_user_privileges: 'wpuser.*:ALL'
+
+nginx_document_root: 'opt/wordpress'
+nginx_index_files: 'index.php index.html'
+
+nginx_server_name: '{{ ansible_host }}'
+nginx_php_fpm_sock_path: 'var/run/php/php{{ php_version }}-fpm.sock'
+
+
