--- a/roles/mysql/defaults/main.yml
+++ b/roles/mysql/defaults/main.yml
@@ -5,7 +5,7 @@ mysql_unix_socket_path: '/var/run/mysqld/mysqld.sock'
 
 mysql_root_password: 'secret'
 
-mysql_user_name: 'user'
+mysql_user_name: 'mysqluser'
 mysql_user_password: 'secret'
-mysql_user_privileges: 'wpuser.*:ALL'
+mysql_user_privileges: '*.*:ALL'
 
